Initial commit for Diagramify project

--- a/package.json
+++ b/package.json
@@ -12,18 +12,29 @@
     "@ai-sdk/anthropic": "^0.0.48",
     "@ai-sdk/openai": "^0.0.54",
     "@deepgram/sdk": "^3.6.0",
+    "@types/pdfmake": "^0.2.11",
     "ai": "^3.3.20",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.0",
+    "firebase-admin": "^13.2.0",
     "framer-motion": "^11.3.31",
+    "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.436.0",
+    "mermaid": "^10.8.0",
     "next": "14.2.7",
+    "openai": "^4.87.3",
+    "pdfmake": "^0.2.18",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^9.0.1",
     "replicate": "^0.32.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
